fix loop spacing

--- a/app/components/kv/view/loops.styl
+++ b/app/components/kv/view/loops.styl
@@ -25,26 +25,21 @@
   border-top-left-radius 0
   border-top-right-radius 0
   border-top-style dotted
-  border-top-width 3px
-
 
 .kv-loop-edge-bottom
   border-bottom-left-radius 0
   border-bottom-right-radius 0
   border-bottom-style dotted
-  border-bottom-width 3px
 
 .kv-loop-edge-left
   border-top-left-radius 0
   border-bottom-left-radius 0
   border-left-style dotted
-  border-left-width 3px
 
 .kv-loop-edge-right
   border-top-right-radius 0
   border-bottom-right-radius 0
   border-right-style dotted
-  border-right-width 3px
 
 .kv-loop-padding-top
   margin-top 41px
@@ -78,27 +73,14 @@
 
 [data-kv-height='1']
   .kv-loop
-    border-width 3px
-    margin 4px
-
-  .kv-loop-edge-top
-    border-top-width 3px
-
-  .kv-loop-edge-bottom
-    border-bottom-width 3px
-
-  .kv-loop-edge-left
-    border-left-width 3px
-
-  .kv-loop-edge-right
-    border-right-width 3px
+    border-width 2px
+    margin 2px
 
   .kv-loops-container
-    position absolute
-    left 5px
-    right 5px
-    top 5px
-    bottom 5px
+    left 8px
+    right 8px
+    top 8px
+    bottom 8px
     margin 4px
 
   .kv-loop-padding-top
