--- a/app/components/kv/view/table.styl
+++ b/app/components/kv/view/table.styl
@@ -64,13 +64,13 @@
   border-radius 2px
   pointer-events none
 
-.kv-cell-atom:hover::before
-  content attr(data-kv-cell)
-  color #999
-  background-color rgba(200,200,200,1)
-  opacity 1
-  z-index 1
-  font-family monospace
+// .kv-cell-atom:hover::before
+//   content attr(data-kv-cell)
+//   color #999
+//   background-color rgba(200,200,200,1)
+//   opacity 1
+//   z-index 1
+//   font-family monospace
 
 .kv-cell-atom.state-active:not(.state-error)
   background-color #aaa
