--- a/app/styles/global.styl
+++ b/app/styles/global.styl
@@ -33,14 +33,14 @@ img, canvas, svg
 .leftPane
   position absolute
   top 0
-  bottom 0
   left 0
+  height 100%
   width 65%
 
 .rightPane
-  position absolute
+  position fixed
   top 0
-  bottom 0
   right 0
+  height 100%
   width 35%
   border-left 1px solid #333333
